--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -8,4 +8,7 @@ edition = "2021"
 # program to be verified with SP1 does less work.
 lambdaworks-plonk = { git = "https://github.com/lambdaclass/lambdaworks", branch = "add-verification-key-serialization" } 
 lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", branch = "add-verification-key-serialization" } 
+cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks", branch = "add-verification-key-serialization" } 
+stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks", branch = "add-verification-key-serialization" } 
 sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
+bincode = "1.3.3"
