--- a/ark-groth16/Cargo.toml
+++ b/ark-groth16/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ark-bls12-377 = "0.4.0"
+ark-bn254 = "0.4.0"
 ark-crypto-primitives = "0.4.0"
 ark-ff = "0.4.2"
 ark-groth16 = "0.4.0"
