--- a/ark_groth16_verifier/Cargo.toml
+++ b/ark_groth16_verifier/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
 bincode = "1.3.3"
 ark-groth16 = "0.4.0"
-ark-bls12-377 = "0.4.0"
 ark-crypto-primitives = "0.4.0"
 ark-serialize = "0.4.2"
 ark-ff = "0.4.2"
+ark-bn254 = "0.4.0"
