--- a/risc0-fibonacci/host/Cargo.toml
+++ b/risc0-fibonacci/host/Cargo.toml
@@ -8,3 +8,4 @@ methods = { path = "../methods" }
 risc0-zkvm = { version = "0.20.1" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
+bincode = "1.3.3"
